Added <em> tags to fonts displayed as italic.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center" valign="top">
-                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo" src="images/logo.jpg" width="174" height="59"></a>
+                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo"
+                                    src="images/logo.jpg" width="174" height="59"></a>
                         </td>
                     </tr>
                 </table>
@@ -155,9 +156,12 @@
                     <tr>
                         <td valign="top"
                             style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
-                            <p>Entertainment and content guru Kim Havens joins us from the likes of Lionsgate, FX, and Disney with 
-                                a difficult-to-find combination of skill sets: deep knowledge of the art of storytelling combined with a 
-                                broader digital savvy that make her invaluable to clients. She’s already been adding value to our work 
+                            <p>Entertainment and content guru Kim Havens joins us from the likes of Lionsgate, FX, and
+                                Disney with
+                                a difficult-to-find combination of skill sets: deep knowledge of the art of storytelling
+                                combined with a
+                                broader digital savvy that make her invaluable to clients. She’s already been adding
+                                value to our work
                                 on several fronts with clients and partners, not to mention our YouTube partnership.</p>
                             <p>Welcome!</p>
                         </td>
@@ -240,7 +244,7 @@
                     <tr>
                         <td align="center" valign="top">
                             <span style="font-family: 'Playfair Display', serif; font-size: 1.75em; color: #000000;">
-                                Get in touch,
+                                <em>Get in touch,</em>
                             </span> <br>
                             <span
                                 style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
@@ -259,58 +263,112 @@
                         <td align="center" valign="top" style="background-color: #1c022f;">
                             <span style="margin-top: 60px; display: block;"></span>
 
-                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo" src="images/logo-white.png" width="134" height="19"></a>
+                            <a href="http://joystickinteractive.com/" target="_blank"><img alt="logo"
+                                    src="images/logo-white.png" width="134" height="19"></a>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Los Angeles</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">4551 Glencoe Avenue</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suite 330</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Marina del Rey, CA 90292</a> <br>
-                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(310) 751 4158</a>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank"
+                                    style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>Los
+                                        Angeles</em></a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">4551 Glencoe
+                                    Avenue</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suite 330</a>
+                                <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Marina del Rey,
+                                    CA 90292</a> <br>
+                                <a href="https://goo.gl/maps/U1LTetERDnGx7Bxi7" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(310) 751
+                                    4158</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">New York</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">25 Broadway</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">5th Floor</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">New York, NY 10004</a> <br>
-                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(646) 602 9727</a>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank"
+                                    style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>New
+                                        York</em></a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">25 Broadway</a>
+                                <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">5th Floor</a>
+                                <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">New York, NY
+                                    10004</a> <br>
+                                <a href="https://goo.gl/maps/mrSZNgQvfm4GVZBG6" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(646) 602
+                                    9727</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">London</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suncourt House, Level 3,</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">18-26 Essex Road,</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">London N1 8LN</a> <br>
-                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +44 (0)749 502 2208</a>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
+                                    style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>London</em></a>
+                                <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suncourt House,
+                                    Level 3,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">18-26 Essex
+                                    Road,</a> <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">London N1 8LN</a>
+                                <br>
+                                <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +44 (0)749
+                                    502 2208</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Santo Domingo</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Edificio Corporativo</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Av. Gustavo Mejia Ricart No. 102 Esq. Ave.</a><br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Abraham Lincoln, Suite 303</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Santo Domingo, Dominican Republic</a> <br>
-                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(809) 562 6921</a>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>Santo
+                                        Domingo</em></a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Edificio
+                                    Corporativo</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Av. Gustavo Mejia
+                                    Ricart No. 102 Esq. Ave.</a><br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Abraham Lincoln,
+                                    Suite 303</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Santo Domingo,
+                                    Dominican Republic</a> <br>
+                                <a href="https://goo.gl/maps/P5MJJgkuQ9tEhozw9" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +(809) 562
+                                    6921</a>
                             </p>
 
                             <span style="margin-top: 20px; display: block;"></span>
 
                             <p style="font-family: 'Roboto', sans-serif; line-height: 1; color: #FFFFFF; margin: 0;">
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;">Sydney</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Level 4, 100 Harris St,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Pyrmont,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Sydney NSW 2009,</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Australia</a> <br>
-                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank" style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +61 433 782 076</a>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>Sydney</em></a>
+                                <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Level 4, 100
+                                    Harris St,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Pyrmont,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Sydney NSW
+                                    2009,</a> <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Australia</a>
+                                <br>
+                                <a href="https://goo.gl/maps/b2nhfzBidV7bBpS28" target="_blank"
+                                    style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +61 433 782
+                                    076</a>
                             </p>
 
                             <span style="margin-top: 60px; display: block;"></span>
@@ -337,9 +395,12 @@
 
                     <tr>
                         <td align="center">
-                            <a href="https://www.facebook.com/joystickinteractive" target="_blank"><img width="30" style="padding: 0 5px;" src="images/facebook.png" alt="facebook"></a>
-                            <a href="https://twitter.com/wearejoystick" target="_blank"><img width="30" style="padding: 0 5px;" src="images/twitter.png" alt="twitter"></a>
-                            <a href="https://www.linkedin.com/company/joystick-interactive/" target="_blank"><img width="30" style="padding: 0 5px;" src="images/linkedin.png" alt="linkedin"></a>
+                            <a href="https://www.facebook.com/joystickinteractive" target="_blank"><img width="30"
+                                    style="padding: 0 5px;" src="images/facebook.png" alt="facebook"></a>
+                            <a href="https://twitter.com/wearejoystick" target="_blank"><img width="30"
+                                    style="padding: 0 5px;" src="images/twitter.png" alt="twitter"></a>
+                            <a href="https://www.linkedin.com/company/joystick-interactive/" target="_blank"><img
+                                    width="30" style="padding: 0 5px;" src="images/linkedin.png" alt="linkedin"></a>
                         </td>
                     </tr>
 
