Updated #000000 color to #1C022F.

--- a/index.html
+++ b/index.html
@@ -11,34 +11,38 @@
 
     <style>
         @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400i|Raleway:700|Roboto&display=swap');
+
         /* Some resets and issue fixes */
         #outlook a {
             padding: 0;
         }
+
         body {
             width: 100% !important;
             padding: 0;
             margin: 0;
             -ms-text-size-adjust: 100%;
-                text-size-adjust: 100%;
+            text-size-adjust: 100%;
             background-color: #EFEDF2;
         }
+
         table td {
             border-collapse: collapse;
             /* outline: 1px dashed red !important; */
         }
+
         @media screen and (max-width: 630px) {
             br {
                 /* display: none !important; */
             }
         }
+
         @media screen and (min-width: 630px) {
             .fixed-width {
                 width: 800px !important;
                 height: auto !important;
             }
         }
-
     </style>
 
 
@@ -74,7 +78,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #1C022F;">
                             <span>
                                 Your Trusted <br> YouTube Creative Partner
                             </span>
@@ -101,7 +105,7 @@
 
                     <tr>
                         <td valign="top"
-                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #1C022F;">
                             <p>Exciting news!</p>
                             <p>Joystick is officially a YouTube creative partner. We're applying our expertise in
                                 building impactful digital campaigns to the YouTube platform and custom video creative.
@@ -128,7 +132,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #1C022F;">
                             <span>
                                 Kim Havens joins as <br> VP, Content Production
                             </span>
@@ -155,7 +159,7 @@
 
                     <tr>
                         <td valign="top"
-                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #1C022F;">
                             <p>Entertainment and content guru Kim Havens joins us from the likes of Lionsgate, FX, and
                                 Disney with
                                 a difficult-to-find combination of skill sets: deep knowledge of the art of storytelling
@@ -181,7 +185,7 @@
 
                     <tr>
                         <td align="center" valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #1C022F;">
                             <span>
                                 Much more to come!
                             </span>
@@ -208,7 +212,7 @@
 
                     <tr>
                         <td valign="top"
-                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #000000;">
+                            style="font-family: 'Roboto', sans-serif; font-size: 1em; line-height: 1.5; color: #1C022F;">
                             <p>We've been hard at work with new and emerging technology. Some of our projects include
                                 work in augmented reality, voice-enabled and visual search experiences.</p>
                             <p>We're excited to
@@ -243,11 +247,11 @@
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td align="center" valign="top">
-                            <span style="font-family: 'Playfair Display', serif; font-size: 1.75em; color: #000000;">
+                            <span style="font-family: 'Playfair Display', serif; font-size: 1.75em; color: #1C022F;">
                                 <em>Get in touch,</em>
                             </span> <br>
                             <span
-                                style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #000000;">
+                                style="font-family: 'Raleway', sans-serif; font-size: 1.75em; font-weight: 700; text-align: center; line-height: 1; color: #1C022F;">
                                 We'd love to hear from you
                             </span>
                         </td>
@@ -313,13 +317,14 @@
                                     style="font-family: 'Playfair Display', serif; text-decoration: none; font-size: 0.875em; color: #FFFFFF;"><em>London</em></a>
                                 <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
-                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">Suncourt House,
-                                    Level 3,</a> <br>
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">16th Floor, The
+                                    Bower</a> <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
-                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">18-26 Essex
-                                    Road,</a> <br>
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">207 Old
+                                    Street</a> <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
-                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">London N1 8LN</a>
+                                    style="text-decoration: none; font-size: 0.687em; color: #FFFFFF;">London EC1V
+                                    9NR</a>
                                 <br>
                                 <a href="https://goo.gl/maps/4T5B7TrCttw6kFbM9" target="_blank"
                                     style="text-decoration: none; font-size: 0.687em; color: #6EE5B9;">Tel: +44 (0)749
@@ -382,7 +387,7 @@
                     <!--------------------------------------------------------- Spacer -->
                     <tr>
                         <td valign="top"
-                            style="font-family: 'Raleway', sans-serif; font-size: 1.5em; font-weight: 700; text-align: center; color: #000000;">
+                            style="font-family: 'Raleway', sans-serif; font-size: 1.5em; font-weight: 700; text-align: center; color: #1C022F;">
                             Connect With Us
                         </td>
                     </tr>
